# rpc-doc-gen

./: COPYING.md  Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs  utils.rs
templates/: method.tera  module.tera  readme.tera
