[package]
name = "rpc-doc-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
syn = { version = "2.0.85", features = ["extra-traits", "full", "parsing", "visit"] }
walkdir = "2.1.4"
proc-macro2 = "1.0"
