[package]
name = "fiber-rpc-gen"
version = "0.1.8"
edition = "2021"
description = "A simple tool to generate documentation for Fiber RPC services."
license-file = "COPYING.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
syn = { version = "2.0.85", features = ["extra-traits", "full", "parsing", "visit"] }
walkdir = "2.1.4"
proc-macro2 = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
libm = "=0.2.8"

[[bin]]
name = "fiber-rpc-gen"
path = "src/main.rs"
